# dart_rust

./: .gitignore  gen.sh  readme.md
dart/: pubspec.yaml
dart/src/: blake3.dart
rust/: Cargo.toml
rust/src/: blake3.rs  bridge_generated.rs  lib.rs
