[package]
name = "dart_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "dart_rust"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
blake3 = "1.0.0"
flutter_rust_bridge = "1.0.3"
lazy_static = "1.4.0"
